@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3558 utf-8
+personal_ws-1.1 en 3560 utf-8
 AAC
 AAS
 ABI
@@ -2837,6 +2837,7 @@ powermand
 powermust
 powernet
 poweroff
+powerp
 powerpal
 powerpanel
 powershell
